# covid19-prediction-model

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: migrate_covid_data.py  migrate_data.py  migrate_mobility_data.py
include/: data_processor.h
models/vietnam/: linear_regression_model.pkl
notebooks/: interpret_predictions.ipynb
notebooks/.ipynb_checkpoints/: interpret_predictions-checkpoint.ipynb
python/: check_processed_data.py  data_processing.py  eda_visualization.py  feature_engineering.py  fetch_data.py  preprocess_data.py  train_model.py
scripts/: data_processing.py  eda_visualization.py  feature_engineering.py  fetch_data.py  migrate_covid_data.py  migrate_data.py  migrate_mobility_data.py  model_evaluation.py  model_training.py  split_data.py
src/: data_processor.cpp  main.cpp
